<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp"
        >
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/taskOptionHeight"
                android:gravity="center_vertical"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/taskName"
                    android:paddingRight="@dimen/taskOptionIconPaddingEnd"
                    android:src="@drawable/ic_label_white_24dp"
                    />

                <TextView
                    android:id="@+id/task_name"
                    android:textColor="@color/white100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/taskOptionHeight"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/taskOptionIconPaddingEnd"
                    android:src="@drawable/ic_position"
                    />


                <org.florescu.android.rangeseekbar.RangeSeekBar
                    android:id="@+id/task_position_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/taskOptionHeight"
                android:gravity="center_vertical"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/taskRun"
                    android:paddingEnd="@dimen/taskOptionIconPaddingEnd"
                    android:src="@drawable/ic_run"
                    />

                <RadioGroup
                    android:id="@+id/task_run"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/task_run_once"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/taskRunOnce"
                        android:textColor="@drawable/radiobutton"
                        />

                    <RadioButton
                        android:id="@+id/task_run_forever"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/taskRunForever"
                        android:textColor="@drawable/radiobutton"
                        />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/task_run_n"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/taskRunN"
                        android:inputType="number"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/taskOptionHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/task_start"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:drawableStart="@drawable/ic_play_arrow_white_24dp"
                    android:enabled="false"
                    android:text="@string/taskStart"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>