<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp"
        >
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:padding="0dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/console"
                android:textColor="@color/textColorPrimary"/>

            <EditText
                android:id="@+id/task_runner_console"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:focusable="false"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:gravity="top|left"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>


        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/task_runner_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="0dp"
            fab:fab_addButtonColorNormal="@color/colorAccent"
            fab:fab_icon="@drawable/ic_menu"
            fab:fab_labelsPosition="left"
            >

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/task_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorAccent"
                fab:fab_icon="@drawable/ic_stop_white_24dp"
                fab:fab_size="mini"
                fab:fab_title="@string/taskStop"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/task_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorAccent"
                fab:fab_icon="@drawable/ic_pause_white_24dp"
                fab:fab_size="mini"
                fab:fab_title="@string/taskPause"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/task_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorAccent"
                fab:fab_icon="@drawable/ic_gps_fixed_white_24dp"
                fab:fab_size="mini"
                fab:fab_title="@string/taskPause"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
